--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Score Table</title>
   </head>
   <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
